# rustbot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: general.rs
