[package]
name = "rustdiscordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache", "http"], default-features = false }
tokio = { version = "1.25.0", features = ["full"] }
